chore: unified error interface (#1940)
Need to do more testing here, but wanted to get it in  front of people
