# apps/api/routes/crm/v2/contact.ts
@@ -1,4 +1,5 @@
 import { getDependencyContainer } from '@/dependency_container';
+import { NotImplementedError } from '@supaglue/core/errors';
 import { toSnakecasedKeysCrmContact } from '@supaglue/core/mappers/crm';
 import { toMappedProperties } from '@supaglue/core/remotes/utils/properties';
 import type {
@@ -174,7 +175,7 @@ export default function init(app: Router): void {
   );
 
   router.delete('/:contact_id', () => {
-    throw new Error('Not implemented');
+    throw new NotImplementedError();
   });
 
   app.use('/contacts', router);
