# openapi/v2/data/openapi.bundle.json
@@ -76,6 +76,27 @@
                 }
               }
             }
+          },
+          "400": {
+            "$ref": "#/paths/~1hubspot~1contacts/get/responses/400"
+          },
+          "401": {
+            "$ref": "#/paths/~1hubspot~1contacts/get/responses/401"
+          },
+          "403": {
+            "$ref": "#/paths/~1hubspot~1contacts/get/responses/403"
+          },
+          "404": {
+            "$ref": "#/paths/~1hubspot~1contacts/get/responses/404"
+          },
+          "499": {
+            "$ref": "#/paths/~1hubspot~1contacts/get/responses/499"
+          },
+          "500": {
+            "$ref": "#/paths/~1hubspot~1contacts/get/responses/500"
+          },
+          "501": {
+            "$ref": "#/paths/~1hubspot~1contacts/get/responses/501"
           }
         }
       },
@@ -134,6 +155,27 @@
                 }
               }
             }
+          },
+          "400": {
+            "$ref": "#/paths/~1hubspot~1contacts/get/responses/400"
+          },
+          "401": {
+            "$ref": "#/paths/~1hubspot~1contacts/get/responses/401"
+          },
+          "403": {
+            "$ref": "#/paths/~1hubspot~1contacts/get/responses/403"
+          },
+          "404": {
+            "$ref": "#/paths/~1hubspot~1contacts/get/responses/404"
+          },
+          "499": {
+            "$ref": "#/paths/~1hubspot~1contacts/get/responses/499"
+          },
+          "500": {
+            "$ref": "#/paths/~1hubspot~1contacts/get/responses/500"
+          },
+          "501": {
+            "$ref": "#/paths/~1hubspot~1contacts/get/responses/501"
           }
         }
       },
@@ -189,6 +231,111 @@
                     "pagination",
                     "records"
                   ]
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "errors": {
+                      "$ref": "#/components/schemas/errors"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "errors": {
+                      "$ref": "#/components/schemas/errors"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "errors": {
+                      "$ref": "#/components/schemas/errors"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "errors": {
+                      "$ref": "#/components/schemas/errors"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "499": {
+            "description": "Remote provider error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "errors": {
+                      "$ref": "#/components/schemas/errors"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "errors": {
+                      "$ref": "#/components/schemas/errors"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "501": {
+            "description": "Not implemented",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "errors": {
+                      "$ref": "#/components/schemas/errors"
+                    }
+                  }
                 }
               }
             }
@@ -250,6 +397,27 @@
                 }
               }
             }
+          },
+          "400": {
+            "$ref": "#/paths/~1hubspot~1contacts/get/responses/400"
+          },
+          "401": {
+            "$ref": "#/paths/~1hubspot~1contacts/get/responses/401"
+          },
+          "403": {
+            "$ref": "#/paths/~1hubspot~1contacts/get/responses/403"
+          },
+          "404": {
+            "$ref": "#/paths/~1hubspot~1contacts/get/responses/404"
+          },
+          "499": {
+            "$ref": "#/paths/~1hubspot~1contacts/get/responses/499"
+          },
+          "500": {
+            "$ref": "#/paths/~1hubspot~1contacts/get/responses/500"
+          },
+          "501": {
+            "$ref": "#/paths/~1hubspot~1contacts/get/responses/501"
           }
         }
       },
@@ -866,27 +1034,156 @@
         "items": {
           "type": "object",
           "properties": {
+            "id": {
+              "type": "string",
+              "description": "A unique identifier for the instance of the error. Provide this to support when contacting Supaglue.",
+              "example": "9366efb4-8fb1-4a28-bfb0-8d6f9cc6b5c5"
+            },
             "detail": {
               "type": "string",
-              "description": "The full error message from the remote Provider. The schema and level of detail will vary by Provider.",
-              "example": "{\"code\":400,\"body\":{\"status\":\"error\",\"message\":\"Property values were not valid: [{\\\\\"isValid\\\\\":false,\\\\\"message\\\\\":\\\\\"Property \\\\\\\\\\\\\"__about_us\\\\\\\\\\\\\" does not exist\\\\\",\\\\\"error\\\\\":\\\\\"PROPERTY_DOESNT_EXIST\\\\\",\\\\\"name\\\\\":\\\\\"__about_us\\\\\",\\\\\"localizedErrorMessage\\\\\":\\\\\"Property \\\\\\\\\\\\\"__about_us\\\\\\\\\\\\\" does not exist\\\\\"}]\",\"correlationId\":\"ac94252c-90b5-45d2-ad1d-9a9f7651d7d2\",\"category\":\"VALIDATION_ERROR\"},\"headers\":{\"access-control-allow-credentials\":\"false\",\"cf-cache-status\":\"DYNAMIC\",\"cf-ray\":\"8053d17b9dae9664-SJC\",\"connection\":\"close\",\"content-length\":\"361\",\"content-type\":\"application/json;charset=utf-8\",\"date\":\"Mon, 11 Sep 2023 23:51:22 GMT\",\"nel\":\"{\\\\\"success_fraction\\\\\":0.01,\\\\\"report_to\\\\\":\\\\\"cf-nel\\\\\",\\\\\"max_age\\\\\":604800}\",\"report-to\":\"{\\\\\"endpoints\\\\\":[{\\\\\"url\\\\\":\\\\\"https://a.nel.cloudflare.com/report/v3?s=FgwuXObO%2Fz6ahUJKsxjDLaXTWjooJ8tB0w4%2B%2BKaulGStx0FGkn1PoJoOx2KrFMfihzNdfAqikq7CmgbdlmwKB8hkmp3eTb68qpg10LXFlRgiSqRhbWM7yYSfo8CXmPBc\\\\\"}],\\\\\"group\\\\\":\\\\\"cf-nel\\\\\",\\\\\"max_age\\\\\":604800}\",\"server\":\"cloudflare\",\"strict-transport-security\":\"max-age=31536000; includeSubDomains; preload\",\"vary\":\"origin, Accept-Encoding\",\"x-content-type-options\":\"nosniff\",\"x-envoy-upstream-service-time\":\"91\",\"x-evy-trace-listener\":\"listener_https\",\"x-evy-trace-route-configuration\":\"listener_https/all\",\"x-evy-trace-route-service-name\":\"envoyset-translator\",\"x-evy-trace-served-by-pod\":\"iad02/hubapi-td/envoy-proxy-6c94986c56-9xsh2\",\"x-evy-trace-virtual-host\":\"all\",\"x-hubspot-correlation-id\":\"ac94252c-90b5-45d2-ad1d-9a9f7651d7d2\",\"x-hubspot-ratelimit-interval-milliseconds\":\"10000\",\"x-hubspot-ratelimit-max\":\"100\",\"x-hubspot-ratelimit-remaining\":\"99\",\"x-hubspot-ratelimit-secondly\":\"10\",\"x-hubspot-ratelimit-secondly-remaining\":\"9\",\"x-request-id\":\"ac94252c-90b5-45d2-ad1d-9a9f7651d7d2\",\"x-trace\":\"2B1B4386362759B6A4C34802AD168B803DDC1BE770000000000000000000\"}}\n"
+              "description": "A detailed description of the error.",
+              "example": "Property values were not valid: [{\"isValid\":false,\"message\":\"Property \\\"__about_us\\\" does not exist\",\"error\":\"PROPERTY_DOESNT_EXIST\",\"name\":\"__about_us\",\"localizedErrorMessage\":\"Property \\\"__about_us\\\" does not exist\"}]"
             },
             "problem_type": {
               "type": "string",
               "description": "The Supaglue error code associated with the error.",
-              "example": "MISSING_REQUIRED_FIELD"
+              "example": "MISSING_REQUIRED_FIELD",
+              "deprecated": true
             },
             "title": {
               "type": "string",
               "description": "A brief description of the error. The schema and type of message will vary by Provider.",
               "example": "Property values were not valid\n"
+            },
+            "code": {
+              "type": "string",
+              "description": "The Supaglue error code associated with the error.",
+              "example": "MISSING_REQUIRED_FIELD"
+            },
+            "status": {
+              "type": "string",
+              "description": "The HTTP status code associated with the error.",
+              "example": "400"
+            },
+            "meta": {
+              "type": "object",
+              "description": "Additional metadata about the error.",
+              "properties": {
+                "cause": {
+                  "type": "object",
+                  "description": "The cause of the error. Usually the underlying error from the remote Provider.",
+                  "example": {
+                    "code": 400,
+                    "body": {
+                      "status": "error",
+                      "message": "Property values were not valid: [{\"isValid\":false,\"message\":\"Property \\\"__about_us\\\" does not exist\",\"error\":\"PROPERTY_DOESNT_EXIST\",\"name\":\"__about_us\",\"localizedErrorMessage\":\"Property \\\"__about_us\\\" does not exist\"}]",
+                      "correlationId": "ac94252c-90b5-45d2-ad1d-9a9f7651d7d2",
+                      "category": "VALIDATION_ERROR"
+                    },
+                    "headers": {
+                      "access-control-allow-credentials": "false",
+                      "cf-cache-status": "DYNAMIC",
+                      "cf-ray": "8053d17b9dae9664-SJC",
+                      "connection": "close",
+                      "content-length": "361",
+                      "content-type": "application/json;charset=utf-8",
+                      "date": "Mon, 11 Sep 2023 23:51:22 GMT",
+                      "nel": "{\"success_fraction\":0.01,\"report_to\":\"cf-nel\",\"max_age\":604800}",
+                      "report-to": "{\"endpoints\":[{\"url\":\"https://a.nel.cloudflare.com/report/v3?s=FgwuXObO%2Fz6ahUJKsxjDLaXTWjooJ8tB0w4%2B%2BKaulGStx0FGkn1PoJoOx2KrFMfihzNdfAqikq7CmgbdlmwKB8hkmp3eTb68qpg10LXFlRgiSqRhbWM7yYSfo8CXmPBc\"}],\"group\":\"cf-nel\",\"max_age\":604800}",
+                      "server": "cloudflare",
+                      "strict-transport-security": "max-age=31536000; includeSubDomains; preload",
+                      "vary": "origin, Accept-Encoding",
+                      "x-content-type-options": "nosniff",
+                      "x-envoy-upstream-service-time": "91",
+                      "x-evy-trace-listener": "listener_https",
+                      "x-evy-trace-route-configuration": "listener_https/all",
+                      "x-evy-trace-route-service-name": "envoyset-translator",
+                      "x-evy-trace-served-by-pod": "iad02/hubapi-td/envoy-proxy-6c94986c56-9xsh2",
+                      "x-evy-trace-virtual-host": "all",
+                      "x-hubspot-correlation-id": "ac94252c-90b5-45d2-ad1d-9a9f7651d7d2",
+                      "x-hubspot-ratelimit-interval-milliseconds": "10000",
+                      "x-hubspot-ratelimit-max": "100",
+                      "x-hubspot-ratelimit-remaining": "99",
+                      "x-hubspot-ratelimit-secondly": "10",
+                      "x-hubspot-ratelimit-secondly-remaining": "9",
+                      "x-request-id": "ac94252c-90b5-45d2-ad1d-9a9f7651d7d2",
+                      "x-trace": "2B1B4386362759B6A4C34802AD168B803DDC1BE770000000000000000000"
+                    }
+                  }
+                },
+                "origin": {
+                  "type": "string",
+                  "enum": [
+                    "remote-provider",
+                    "supaglue"
+                  ],
+                  "description": "The origin of the error.",
+                  "example": "remote-provider"
+                }
+              },
+              "required": [
+                "origin"
+              ],
+              "additionalProperties": true
             }
           },
+          "required": [
+            "id",
+            "detail",
+            "problem_type",
+            "title",
+            "code",
+            "status",
+            "meta"
+          ],
           "example": [
             {
-              "detail": "{\"code\":400,\"body\":{\"status\":\"error\",\"message\":\"Property values were not valid: [{\\\\\"isValid\\\\\":false,\\\\\"message\\\\\":\\\\\"Property \\\\\\\\\\\\\"__about_us\\\\\\\\\\\\\" does not exist\\\\\",\\\\\"error\\\\\":\\\\\"PROPERTY_DOESNT_EXIST\\\\\",\\\\\"name\\\\\":\\\\\"__about_us\\\\\",\\\\\"localizedErrorMessage\\\\\":\\\\\"Property \\\\\\\\\\\\\"__about_us\\\\\\\\\\\\\" does not exist\\\\\"}]\",\"correlationId\":\"ac94252c-90b5-45d2-ad1d-9a9f7651d7d2\",\"category\":\"VALIDATION_ERROR\"},\"headers\":{\"access-control-allow-credentials\":\"false\",\"cf-cache-status\":\"DYNAMIC\",\"cf-ray\":\"8053d17b9dae9664-SJC\",\"connection\":\"close\",\"content-length\":\"361\",\"content-type\":\"application/json;charset=utf-8\",\"date\":\"Mon, 11 Sep 2023 23:51:22 GMT\",\"nel\":\"{\\\\\"success_fraction\\\\\":0.01,\\\\\"report_to\\\\\":\\\\\"cf-nel\\\\\",\\\\\"max_age\\\\\":604800}\",\"report-to\":\"{\\\\\"endpoints\\\\\":[{\\\\\"url\\\\\":\\\\\"https://a.nel.cloudflare.com/report/v3?s=FgwuXObO%2Fz6ahUJKsxjDLaXTWjooJ8tB0w4%2B%2BKaulGStx0FGkn1PoJoOx2KrFMfihzNdfAqikq7CmgbdlmwKB8hkmp3eTb68qpg10LXFlRgiSqRhbWM7yYSfo8CXmPBc\\\\\"}],\\\\\"group\\\\\":\\\\\"cf-nel\\\\\",\\\\\"max_age\\\\\":604800}\",\"server\":\"cloudflare\",\"strict-transport-security\":\"max-age=31536000; includeSubDomains; preload\",\"vary\":\"origin, Accept-Encoding\",\"x-content-type-options\":\"nosniff\",\"x-envoy-upstream-service-time\":\"91\",\"x-evy-trace-listener\":\"listener_https\",\"x-evy-trace-route-configuration\":\"listener_https/all\",\"x-evy-trace-route-service-name\":\"envoyset-translator\",\"x-evy-trace-served-by-pod\":\"iad02/hubapi-td/envoy-proxy-6c94986c56-9xsh2\",\"x-evy-trace-virtual-host\":\"all\",\"x-hubspot-correlation-id\":\"ac94252c-90b5-45d2-ad1d-9a9f7651d7d2\",\"x-hubspot-ratelimit-interval-milliseconds\":\"10000\",\"x-hubspot-ratelimit-max\":\"100\",\"x-hubspot-ratelimit-remaining\":\"99\",\"x-hubspot-ratelimit-secondly\":\"10\",\"x-hubspot-ratelimit-secondly-remaining\":\"9\",\"x-request-id\":\"ac94252c-90b5-45d2-ad1d-9a9f7651d7d2\",\"x-trace\":\"2B1B4386362759B6A4C34802AD168B803DDC1BE770000000000000000000\"}}\n",
-              "problem_type": "BAD_REQUEST_ERROR",
-              "title": "Property values were not valid\n"
+              "meta": {
+                "cause": {
+                  "code": 400,
+                  "body": {
+                    "status": "error",
+                    "message": "Property values were not valid: [{\"isValid\":false,\"message\":\"Property \\\"__about_us\\\" does not exist\",\"error\":\"PROPERTY_DOESNT_EXIST\",\"name\":\"__about_us\",\"localizedErrorMessage\":\"Property \\\"__about_us\\\" does not exist\"}]",
+                    "correlationId": "ac94252c-90b5-45d2-ad1d-9a9f7651d7d2",
+                    "category": "VALIDATION_ERROR"
+                  },
+                  "headers": {
+                    "access-control-allow-credentials": "false",
+                    "cf-cache-status": "DYNAMIC",
+                    "cf-ray": "8053d17b9dae9664-SJC",
+                    "connection": "close",
+                    "content-length": "361",
+                    "content-type": "application/json;charset=utf-8",
+                    "date": "Mon, 11 Sep 2023 23:51:22 GMT",
+                    "nel": "{\"success_fraction\":0.01,\"report_to\":\"cf-nel\",\"max_age\":604800}",
+                    "report-to": "{\"endpoints\":[{\"url\":\"https://a.nel.cloudflare.com/report/v3?s=FgwuXObO%2Fz6ahUJKsxjDLaXTWjooJ8tB0w4%2B%2BKaulGStx0FGkn1PoJoOx2KrFMfihzNdfAqikq7CmgbdlmwKB8hkmp3eTb68qpg10LXFlRgiSqRhbWM7yYSfo8CXmPBc\"}],\"group\":\"cf-nel\",\"max_age\":604800}",
+                    "server": "cloudflare",
+                    "strict-transport-security": "max-age=31536000; includeSubDomains; preload",
+                    "vary": "origin, Accept-Encoding",
+                    "x-content-type-options": "nosniff",
+                    "x-envoy-upstream-service-time": "91",
+                    "x-evy-trace-listener": "listener_https",
+                    "x-evy-trace-route-configuration": "listener_https/all",
+                    "x-evy-trace-route-service-name": "envoyset-translator",
+                    "x-evy-trace-served-by-pod": "iad02/hubapi-td/envoy-proxy-6c94986c56-9xsh2",
+                    "x-evy-trace-virtual-host": "all",
+                    "x-hubspot-correlation-id": "ac94252c-90b5-45d2-ad1d-9a9f7651d7d2",
+                    "x-hubspot-ratelimit-interval-milliseconds": "10000",
+                    "x-hubspot-ratelimit-max": "100",
+                    "x-hubspot-ratelimit-remaining": "99",
+                    "x-hubspot-ratelimit-secondly": "10",
+                    "x-hubspot-ratelimit-secondly-remaining": "9",
+                    "x-request-id": "ac94252c-90b5-45d2-ad1d-9a9f7651d7d2",
+                    "x-trace": "2B1B4386362759B6A4C34802AD168B803DDC1BE770000000000000000000"
+                  }
+                }
+              },
+              "detail": "Property values were not valid: [{\"isValid\":false,\"message\":\"Property \\\"__about_us\\\" does not exist\",\"error\":\"PROPERTY_DOESNT_EXIST\",\"name\":\"__about_us\",\"localizedErrorMessage\":\"Property \\\"__about_us\\\" does not exist\"}]",
+              "problem_type": "MISSING_REQUIRED_FIELD",
+              "title": "Property values were not valid\n",
+              "code": "MISSING_REQUIRED_FIELD",
+              "status": "400",
+              "id": "9366efb4-8fb1-4a28-bfb0-8d6f9cc6b5c5"
             }
           ]
         }
