# packages/schemas/gen/v2/marketing-automation.ts
@@ -100,6 +100,91 @@ export interface components {
       /** @description If true, will be selected by default. Defaults to false. */
       is_default?: boolean;
     };
+    errors: ({
+        /**
+         * @description A unique identifier for the instance of the error. Provide this to support when contacting Supaglue.
+         * @example 9366efb4-8fb1-4a28-bfb0-8d6f9cc6b5c5
+         */
+        id: string;
+        /**
+         * @description A detailed description of the error.
+         * @example Property values were not valid: [{"isValid":false,"message":"Property \"__about_us\" does not exist","error":"PROPERTY_DOESNT_EXIST","name":"__about_us","localizedErrorMessage":"Property \"__about_us\" does not exist"}]
+         */
+        detail: string;
+        /**
+         * @deprecated
+         * @description The Supaglue error code associated with the error.
+         * @example MISSING_REQUIRED_FIELD
+         */
+        problem_type: string;
+        /**
+         * @description A brief description of the error. The schema and type of message will vary by Provider.
+         * @example Property values were not valid
+         */
+        title: string;
+        /**
+         * @description The Supaglue error code associated with the error.
+         * @example MISSING_REQUIRED_FIELD
+         */
+        code: string;
+        /**
+         * @description The HTTP status code associated with the error.
+         * @example 400
+         */
+        status: string;
+        /** @description Additional metadata about the error. */
+        meta: {
+          /**
+           * @description The cause of the error. Usually the underlying error from the remote Provider.
+           * @example {
+           *   "code": 400,
+           *   "body": {
+           *     "status": "error",
+           *     "message": "Property values were not valid: [{\"isValid\":false,\"message\":\"Property \\\"__about_us\\\" does not exist\",\"error\":\"PROPERTY_DOESNT_EXIST\",\"name\":\"__about_us\",\"localizedErrorMessage\":\"Property \\\"__about_us\\\" does not exist\"}]",
+           *     "correlationId": "ac94252c-90b5-45d2-ad1d-9a9f7651d7d2",
+           *     "category": "VALIDATION_ERROR"
+           *   },
+           *   "headers": {
+           *     "access-control-allow-credentials": "false",
+           *     "cf-cache-status": "DYNAMIC",
+           *     "cf-ray": "8053d17b9dae9664-SJC",
+           *     "connection": "close",
+           *     "content-length": "361",
+           *     "content-type": "application/json;charset=utf-8",
+           *     "date": "Mon, 11 Sep 2023 23:51:22 GMT",
+           *     "nel": "{\"success_fraction\":0.01,\"report_to\":\"cf-nel\",\"max_age\":604800}",
+           *     "report-to": "{\"endpoints\":[{\"url\":\"https://a.nel.cloudflare.com/report/v3?s=FgwuXObO%2Fz6ahUJKsxjDLaXTWjooJ8tB0w4%2B%2BKaulGStx0FGkn1PoJoOx2KrFMfihzNdfAqikq7CmgbdlmwKB8hkmp3eTb68qpg10LXFlRgiSqRhbWM7yYSfo8CXmPBc\"}],\"group\":\"cf-nel\",\"max_age\":604800}",
+           *     "server": "cloudflare",
+           *     "strict-transport-security": "max-age=31536000; includeSubDomains; preload",
+           *     "vary": "origin, Accept-Encoding",
+           *     "x-content-type-options": "nosniff",
+           *     "x-envoy-upstream-service-time": "91",
+           *     "x-evy-trace-listener": "listener_https",
+           *     "x-evy-trace-route-configuration": "listener_https/all",
+           *     "x-evy-trace-route-service-name": "envoyset-translator",
+           *     "x-evy-trace-served-by-pod": "iad02/hubapi-td/envoy-proxy-6c94986c56-9xsh2",
+           *     "x-evy-trace-virtual-host": "all",
+           *     "x-hubspot-correlation-id": "ac94252c-90b5-45d2-ad1d-9a9f7651d7d2",
+           *     "x-hubspot-ratelimit-interval-milliseconds": "10000",
+           *     "x-hubspot-ratelimit-max": "100",
+           *     "x-hubspot-ratelimit-remaining": "99",
+           *     "x-hubspot-ratelimit-secondly": "10",
+           *     "x-hubspot-ratelimit-secondly-remaining": "9",
+           *     "x-request-id": "ac94252c-90b5-45d2-ad1d-9a9f7651d7d2",
+           *     "x-trace": "2B1B4386362759B6A4C34802AD168B803DDC1BE770000000000000000000"
+           *   }
+           * }
+           */
+          cause?: Record<string, never>;
+          /**
+           * @description The origin of the error.
+           * @example remote-provider
+           * @enum {string}
+           */
+          origin: "remote-provider" | "supaglue";
+          [key: string]: unknown;
+        };
+      })[];
   };
   responses: never;
   parameters: {
@@ -171,6 +256,29 @@ export interface operations {
           "application/json": components["schemas"]["submit_form_response"];
         };
       };
+      400: paths["/forms"]["get"]["responses"]["400"];
+      401: paths["/forms"]["get"]["responses"]["401"];
+      403: paths["/forms"]["get"]["responses"]["403"];
+      404: paths["/forms"]["get"]["responses"]["404"];
+      /** @description Conflict */
+      409: {
+        content: {
+          "application/json": {
+            errors?: components["schemas"]["errors"];
+          };
+        };
+      };
+      /** @description Unprocessable entity */
+      422: {
+        content: {
+          "application/json": {
+            errors?: components["schemas"]["errors"];
+          };
+        };
+      };
+      499: paths["/forms"]["get"]["responses"]["499"];
+      500: paths["/forms"]["get"]["responses"]["500"];
+      501: paths["/forms"]["get"]["responses"]["501"];
     };
   };
   /** List forms */
@@ -190,6 +298,62 @@ export interface operations {
         content: {
           "application/json": {
             forms: components["schemas"]["form_metadata"][];
+          };
+        };
+      };
+      /** @description Bad request */
+      400: {
+        content: {
+          "application/json": {
+            errors?: components["schemas"]["errors"];
+          };
+        };
+      };
+      /** @description Unauthorized */
+      401: {
+        content: {
+          "application/json": {
+            errors?: components["schemas"]["errors"];
+          };
+        };
+      };
+      /** @description Forbidden */
+      403: {
+        content: {
+          "application/json": {
+            errors?: components["schemas"]["errors"];
+          };
+        };
+      };
+      /** @description Not found */
+      404: {
+        content: {
+          "application/json": {
+            errors?: components["schemas"]["errors"];
+          };
+        };
+      };
+      /** @description Remote provider error */
+      499: {
+        content: {
+          "application/json": {
+            errors?: components["schemas"]["errors"];
+          };
+        };
+      };
+      /** @description Internal server error */
+      500: {
+        content: {
+          "application/json": {
+            errors?: components["schemas"]["errors"];
+          };
+        };
+      };
+      /** @description Not implemented */
+      501: {
+        content: {
+          "application/json": {
+            errors?: components["schemas"]["errors"];
           };
         };
       };
@@ -219,6 +383,13 @@ export interface operations {
           };
         };
       };
+      400: paths["/forms"]["get"]["responses"]["400"];
+      401: paths["/forms"]["get"]["responses"]["401"];
+      403: paths["/forms"]["get"]["responses"]["403"];
+      404: paths["/forms"]["get"]["responses"]["404"];
+      499: paths["/forms"]["get"]["responses"]["499"];
+      500: paths["/forms"]["get"]["responses"]["500"];
+      501: paths["/forms"]["get"]["responses"]["501"];
     };
   };
 }
