# packages/schemas/gen/v2/ticketing.ts
@@ -402,23 +402,91 @@ export interface components {
       /** @example 100 */
       total_count?: number;
     };
-    errors: {
+    errors: ({
         /**
-         * @description The full error message from the remote Provider. The schema and level of detail will vary by Provider.
-         * @example {"code":400,"body":{"status":"error","message":"Property values were not valid: [{\\"isValid\\":false,\\"message\\":\\"Property \\\\\\"__about_us\\\\\\" does not exist\\",\\"error\\":\\"PROPERTY_DOESNT_EXIST\\",\\"name\\":\\"__about_us\\",\\"localizedErrorMessage\\":\\"Property \\\\\\"__about_us\\\\\\" does not exist\\"}]","correlationId":"ac94252c-90b5-45d2-ad1d-9a9f7651d7d2","category":"VALIDATION_ERROR"},"headers":{"access-control-allow-credentials":"false","cf-cache-status":"DYNAMIC","cf-ray":"8053d17b9dae9664-SJC","connection":"close","content-length":"361","content-type":"application/json;charset=utf-8","date":"Mon, 11 Sep 2023 23:51:22 GMT","nel":"{\\"success_fraction\\":0.01,\\"report_to\\":\\"cf-nel\\",\\"max_age\\":604800}","report-to":"{\\"endpoints\\":[{\\"url\\":\\"https://a.nel.cloudflare.com/report/v3?s=FgwuXObO%2Fz6ahUJKsxjDLaXTWjooJ8tB0w4%2B%2BKaulGStx0FGkn1PoJoOx2KrFMfihzNdfAqikq7CmgbdlmwKB8hkmp3eTb68qpg10LXFlRgiSqRhbWM7yYSfo8CXmPBc\\"}],\\"group\\":\\"cf-nel\\",\\"max_age\\":604800}","server":"cloudflare","strict-transport-security":"max-age=31536000; includeSubDomains; preload","vary":"origin, Accept-Encoding","x-content-type-options":"nosniff","x-envoy-upstream-service-time":"91","x-evy-trace-listener":"listener_https","x-evy-trace-route-configuration":"listener_https/all","x-evy-trace-route-service-name":"envoyset-translator","x-evy-trace-served-by-pod":"iad02/hubapi-td/envoy-proxy-6c94986c56-9xsh2","x-evy-trace-virtual-host":"all","x-hubspot-correlation-id":"ac94252c-90b5-45d2-ad1d-9a9f7651d7d2","x-hubspot-ratelimit-interval-milliseconds":"10000","x-hubspot-ratelimit-max":"100","x-hubspot-ratelimit-remaining":"99","x-hubspot-ratelimit-secondly":"10","x-hubspot-ratelimit-secondly-remaining":"9","x-request-id":"ac94252c-90b5-45d2-ad1d-9a9f7651d7d2","x-trace":"2B1B4386362759B6A4C34802AD168B803DDC1BE770000000000000000000"}}
+         * @description A unique identifier for the instance of the error. Provide this to support when contacting Supaglue.
+         * @example 9366efb4-8fb1-4a28-bfb0-8d6f9cc6b5c5
          */
-        detail?: string;
+        id: string;
         /**
+         * @description A detailed description of the error.
+         * @example Property values were not valid: [{"isValid":false,"message":"Property \"__about_us\" does not exist","error":"PROPERTY_DOESNT_EXIST","name":"__about_us","localizedErrorMessage":"Property \"__about_us\" does not exist"}]
+         */
+        detail: string;
+        /**
+         * @deprecated
          * @description The Supaglue error code associated with the error.
          * @example MISSING_REQUIRED_FIELD
          */
-        problem_type?: string;
+        problem_type: string;
         /**
          * @description A brief description of the error. The schema and type of message will vary by Provider.
          * @example Property values were not valid
          */
-        title?: string;
-      }[];
+        title: string;
+        /**
+         * @description The Supaglue error code associated with the error.
+         * @example MISSING_REQUIRED_FIELD
+         */
+        code: string;
+        /**
+         * @description The HTTP status code associated with the error.
+         * @example 400
+         */
+        status: string;
+        /** @description Additional metadata about the error. */
+        meta: {
+          /**
+           * @description The cause of the error. Usually the underlying error from the remote Provider.
+           * @example {
+           *   "code": 400,
+           *   "body": {
+           *     "status": "error",
+           *     "message": "Property values were not valid: [{\"isValid\":false,\"message\":\"Property \\\"__about_us\\\" does not exist\",\"error\":\"PROPERTY_DOESNT_EXIST\",\"name\":\"__about_us\",\"localizedErrorMessage\":\"Property \\\"__about_us\\\" does not exist\"}]",
+           *     "correlationId": "ac94252c-90b5-45d2-ad1d-9a9f7651d7d2",
+           *     "category": "VALIDATION_ERROR"
+           *   },
+           *   "headers": {
+           *     "access-control-allow-credentials": "false",
+           *     "cf-cache-status": "DYNAMIC",
+           *     "cf-ray": "8053d17b9dae9664-SJC",
+           *     "connection": "close",
+           *     "content-length": "361",
+           *     "content-type": "application/json;charset=utf-8",
+           *     "date": "Mon, 11 Sep 2023 23:51:22 GMT",
+           *     "nel": "{\"success_fraction\":0.01,\"report_to\":\"cf-nel\",\"max_age\":604800}",
+           *     "report-to": "{\"endpoints\":[{\"url\":\"https://a.nel.cloudflare.com/report/v3?s=FgwuXObO%2Fz6ahUJKsxjDLaXTWjooJ8tB0w4%2B%2BKaulGStx0FGkn1PoJoOx2KrFMfihzNdfAqikq7CmgbdlmwKB8hkmp3eTb68qpg10LXFlRgiSqRhbWM7yYSfo8CXmPBc\"}],\"group\":\"cf-nel\",\"max_age\":604800}",
+           *     "server": "cloudflare",
+           *     "strict-transport-security": "max-age=31536000; includeSubDomains; preload",
+           *     "vary": "origin, Accept-Encoding",
+           *     "x-content-type-options": "nosniff",
+           *     "x-envoy-upstream-service-time": "91",
+           *     "x-evy-trace-listener": "listener_https",
+           *     "x-evy-trace-route-configuration": "listener_https/all",
+           *     "x-evy-trace-route-service-name": "envoyset-translator",
+           *     "x-evy-trace-served-by-pod": "iad02/hubapi-td/envoy-proxy-6c94986c56-9xsh2",
+           *     "x-evy-trace-virtual-host": "all",
+           *     "x-hubspot-correlation-id": "ac94252c-90b5-45d2-ad1d-9a9f7651d7d2",
+           *     "x-hubspot-ratelimit-interval-milliseconds": "10000",
+           *     "x-hubspot-ratelimit-max": "100",
+           *     "x-hubspot-ratelimit-remaining": "99",
+           *     "x-hubspot-ratelimit-secondly": "10",
+           *     "x-hubspot-ratelimit-secondly-remaining": "9",
+           *     "x-request-id": "ac94252c-90b5-45d2-ad1d-9a9f7651d7d2",
+           *     "x-trace": "2B1B4386362759B6A4C34802AD168B803DDC1BE770000000000000000000"
+           *   }
+           * }
+           */
+          cause?: Record<string, never>;
+          /**
+           * @description The origin of the error.
+           * @example remote-provider
+           * @enum {string}
+           */
+          origin: "remote-provider" | "supaglue";
+          [key: string]: unknown;
+        };
+      })[];
     warnings: {
         detail?: string;
         problem_type?: string;
